# Swarm-Drone-Project

./: .gitignore  PROJECT_STRUCTURE.md  README.md  add_drone_cameras.py  run_multi_drone_gazebo.sh  setup_satellite_map.py  spawn_drones_with_cameras.sh
formations/: generators.py
mapping/: README.md  __init__.py  area_mapping.py
maps/: README.md  satellite_map.world
orchestrator/: README.md  __init__.py  circle_mission.py
src/digi_rc/: CMakeLists.txt  package.xml
src/digi_rc/src/: commander.py  multi_drone.py
src/digi_rc/srv/: Command.srv
src/swarm_formations/: __init__.py
src/swarm_mapping/: README.md  camera_interface.py  vision_processing.py
src/swarm_orchestrator/: README.md  circle_mission.py  command_interface.py
